# Stellar-Tipz

./: .gitignore  package.json
contracts/tipz/: Cargo.toml
contracts/tipz/src/: admin.rs  errors.rs  events.rs  fees.rs  leaderboard.rs  lib.rs  multisig.rs  profile.rs  stats.rs  storage.rs  subscription.rs  tips.rs  token.rs  types.rs  validation.rs  verification.rs  withdraw.rs
contracts/tipz/src/test/: mod.rs  test_admin.rs  test_anonymous_tips.rs  test_config.rs  test_credit.rs  test_donation_page.rs  test_events.rs  test_fuzz.rs  test_init.rs  test_integration.rs  test_integration_advanced.rs  test_leaderboard.rs  test_min_tip.rs  test_multisig.rs  test_pause.rs  test_profile_query.rs  test_profiles.rs  test_register.rs  test_stats.rs  test_storage.rs  test_subscriptions.rs  test_tips.rs  test_ttl_desync.rs  test_update_profile.rs  test_validation.rs  test_versioning.rs  test_withdraw.rs  test_x_handle.rs
contracts/tipz/test_snapshots/leaderboard/tests/: test_update_leaderboard_all_equal_totals.1.json  test_update_leaderboard_entry_sorts_to_position_zero.1.json  test_update_leaderboard_two_entries_need_swap.1.json
contracts/tipz/test_snapshots/storage/tests/: add_to_fees_accumulates.1.json  add_to_tips_volume_accumulates.1.json  extend_instance_ttl_sets_expected_ttl.1.json  get_profile_round_trips.1.json  increment_tip_count_returns_pre_increment_value.1.json  is_initialized_true_after_set.1.json  set_and_get_admin.1.json  set_and_get_fee_bps.1.json  set_and_get_fee_collector.1.json  set_and_get_username_address.1.json  set_profile_and_has_profile.1.json  (+2 more)
(+339 files in other folders)
